--- a/Handlebars/views/layouts/index.hbs
+++ b/Handlebars/views/layouts/index.hbs
@@ -21,23 +21,7 @@
 </head>
 <body class="merchandiseBody">
   <header>
-        <div class="encabezado justify-content-center ">
-          <div class="headerTitulo one">
-                <h1>DeTito.com</h1>
-          </div>
-          <div class="Desktop two">
-            <input type="search" placeholder="buscar productos y servicios..." size="68%">
-          </div>
-          <div class="Mobile three">
-            <input type="search" placeholder="buscar productos y servicios...">
-          </div>
-          <div class="d-flex four"> <!--Carrito del bootstrap theme-->
-            <a class="btn btn-outline-dark" type="submit" href="../pages/carrito.html">
-                <h9>Carrito</h9>
-                <p class="badge bg-dark text-white ms-1 rounded-pill" id="totalPrice" ></p>
-            </a>
-        </div>
-        </div>
+
         <nav class="navbar navbar-expand-lg navbar-light"> <!--nav bar de bootstrap con menú hamburguesa en responsive-->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -48,45 +32,36 @@
                           <a class="nav-link" href="../index.html">Inicio<span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="../pages/Aboutus.html">Acerca de nosotros<span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="">Acerca de nosotros<span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item dropdown">
                           <a class="nav-link dropdown-toggle" href="../pages/merchandise.html" id="navbarScrollingDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                           Productos y servicios
                           </a>
                           <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                          <li><a class="dropdown-item" href="../pages/merchandise.html">Electrodomésticos</a></li>
+                          <li><a class="dropdown-item" href="../productos">Electrodomésticos</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="../pages/merchandise.html">Bazar</a></li>
+                          <li><a class="dropdown-item" href="../productos">Bazar</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="../pages/merchandise.html">Muebles</a></li>
+                          <li><a class="dropdown-item" href="../productos">Muebles</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="../pages/merchandise.html">Envíos</a></li>
+                          <li><a class="dropdown-item" href="../productos">Envíos</a></li>
                           <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="../pages/merchandise.html">Servicios</a></li>
+                          <li><a class="dropdown-item" href="../productos">Servicios</a></li>
                           </ul>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="../pages/contact.html">Contactenos</a>
+                          <a class="nav-link" href="">Contactenos</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" href="../pages/supplier.html" tabindex="-1" aria-disabled="true">Proveedores</a>
+                          <a class="nav-link" href="" tabindex="-1" aria-disabled="true">Proveedores</a>
                       </li>
                   </ul>
           </div>
     </nav> 
     </header>
-    <div>
-          <div class="whatsapp btn-whatsapp2" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i>
-              <img src="../imagenes/whatsapp.svg" width="30">
-          </div>
-    </div>
     <!--Theme ecommerce de bootstrap adaptado a mi sitio https://startbootstrap.com/template/shop-homepage-->
    <section class="py-5">
-        <div>
-            <h2 class="ofertasCalientes">PRODUCTOS EN OFERTA. QUEDAN POCAS UNIDADES!!
-            </h2>
-        </div>
         <div class="container-fluid">
                 <div id="contenedor-lista-productos" class="cards">
                     {{{body}}}
@@ -102,8 +77,6 @@
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-    <!--scripts del curso de JS-->
-    <script src="../app/app.js"></script>
 </body>
 
 </html>
