--- a/Handlebars/views/datos.hbs
+++ b/Handlebars/views/datos.hbs
@@ -1,25 +1,27 @@
 {{#if listExists}}
     {{#each suggestedChamps}}
-            <div>
-                <table className="table table-responsive table-bordered">
-                    <thead>
-                    <tr className="text-primary">
-                        <th >Id</th>
-                        <th >Producto</th>
-                        <th >Precio por unidad</th>
-                        <th >Imagen</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                            <tr>
-                                <td>{{this.id}}</td>
-                                <td>{{this.title}}</td>
-                                <td>{{this.price}}</td>
-                                <td><img src="{{this.src}}" alt="se esperaba una imagen" /></td>
-                            </tr>
-                    </tbody>
-                </table>
+           
+           <div class="card rounded-3 mb-4">
+                    <div class="card-body p-4">
+                        <div class="row d-flex justify-content-between align-items-center">
+                        <div class="col-md-2 col-lg-2 col-xl-2">
+                            <img src="{{this.src}}" alt="se esperaba una imagen"
+                            class="img-fluid rounded-3">
+                        </div>
+                        <div class="col-md-3 col-lg-3 col-xl-3">
+                            <p class="lead fw-normal mb-2">{{this.title}} (ID:{{this.id}})</p>
+                        </div>
+
+                        <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
+                            <h5 class="mb-0">${{this.price}}</h5>
+                        </div>
+                        <div class="col-md-1 col-lg-1 col-xl-1 text-end">
+                            <a href="#!" class="text-danger"><i class="fas fa-trash fa-lg"></i></a>
+                        </div>
+                        </div>
+                    </div>
             </div>
+           
     {{/each}}
 {{/if}}
 
